// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AST renderers formatted text renderer should handle code blocks 1`] = `
"
The code
  > someJS();
"
`;

exports[`AST renderers formatted text renderer should handle code blocks 2`] = `
"
> someJS(); someJS(); someJS(); someJS(); someJS(); someJS(); someJS(); someJS(); someJS(); someJS();
"
`;

exports[`AST renderers formatted text renderer should handle dictionaries 1`] = `
"
[32mBOLD label[0m
         Term: Definition
Longer Term 2: Definition 2
"
`;

exports[`AST renderers formatted text renderer should handle dictionaries 2`] = `
"Term: Definition Definition Definition Definition Definition Defin
      ition Definition Definition
"
`;

exports[`AST renderers formatted text renderer should handle tables 1`] = `
"
Simple label
┌─────┬─────┐
│ 1:1 │ 1:2 │
├─────┼─────┤
│ 2:1 │ 2:2 │
└─────┴─────┘
"
`;

exports[`AST renderers formatted text renderer should handle tables 2`] = `
"┌─────┬──────────────────────────────────────────────────────────────┐
│ 1:1 │ 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2  │
│     │ 1:2 1:2 1:2                                                  │
└─────┴──────────────────────────────────────────────────────────────┘
"
`;

exports[`AST renderers formatted text renderer should render condition 1`] = `
"
Condition: I am condition
    I am content
"
`;

exports[`AST renderers formatted text renderer should render test line 1`] = `
"I am test line
  I am content
"
`;

exports[`AST renderers html renderer should handle code blocks 1`] = `"<figure class=\\"suitest-test-line__code-block\\"><figcaption>The code</figcaption><pre><code>someJS();</code></pre></figure>"`;

exports[`AST renderers html renderer should handle code blocks 2`] = `"<figure class=\\"suitest-test-line__code-block\\"><pre><code>someJS(); someJS(); someJS(); someJS(); someJS(); someJS(); someJS(); someJS(); someJS(); someJS();</code></pre></figure>"`;

exports[`AST renderers html renderer should handle dictionaries 1`] = `"<figure class=\\"suitest-test-line__dictionary\\"><figcaption><span class=\\"suitest-test-line__text--bold\\">BOLD label</span></figcaption><dl><dt>Term</dt><dd>Definition</dd><dt>Longer Term 2</dt><dd>Definition 2</dd></dl></figure>"`;

exports[`AST renderers html renderer should handle dictionaries 2`] = `"<figure class=\\"suitest-test-line__dictionary\\"><dl><dt>Term</dt><dd>Definition Definition Definition Definition Definition Definition Definition Definition</dd></dl></figure>"`;

exports[`AST renderers html renderer should handle tables 1`] = `"<figure class=\\"suitest-test-line__table\\"><figcaption>Simple label</figcaption><table><tr><td>1:1</td><td>1:2</td></tr><tr><td>2:1</td><td>2:2</td></tr></table></figure>"`;

exports[`AST renderers html renderer should handle tables 2`] = `"<figure class=\\"suitest-test-line__table\\"><table><tr><td>1:1</td><td>1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2</td></tr></table></figure>"`;

exports[`AST renderers html renderer should handle textual nodes 1`] = `"<p class=\\"suitest-test-line__paragraph\\">TEST <span class=\\"suitest-test-line__text--bold\\">bold</span></p>"`;

exports[`AST renderers html renderer should render condition 1`] = `"<figure class=\\"suitest-test-line__condition\\"><figcaption>Condition: I am condition</figcaption><p class=\\"suitest-test-line__paragraph\\">I am content</p></figure>"`;

exports[`AST renderers html renderer should render test line 1`] = `"<figure class=\\"suitest-test-line\\"><figcaption>I am test line</figcaption><p class=\\"suitest-test-line__paragraph\\">I am content</p></figure>"`;

exports[`AST renderers plain text renderer should handle code blocks 1`] = `
"
The code
  > someJS();
"
`;

exports[`AST renderers plain text renderer should handle code blocks 2`] = `
"
> someJS(); someJS(); someJS(); someJS(); someJS(); someJS(); someJS(); someJS(); someJS(); someJS();
"
`;

exports[`AST renderers plain text renderer should handle dictionaries 1`] = `
"
BOLD label
         Term: Definition
Longer Term 2: Definition 2
"
`;

exports[`AST renderers plain text renderer should handle dictionaries 2`] = `
"Term: Definition Definition Definition Definition Definition Defin
      ition Definition Definition
"
`;

exports[`AST renderers plain text renderer should handle tables 1`] = `
"
Simple label
┌─────┬─────┐
│ 1:1 │ 1:2 │
├─────┼─────┤
│ 2:1 │ 2:2 │
└─────┴─────┘
"
`;

exports[`AST renderers plain text renderer should handle tables 2`] = `
"┌─────┬──────────────────────────────────────────────────────────────┐
│ 1:1 │ 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2 1:2  │
│     │ 1:2 1:2 1:2                                                  │
└─────┴──────────────────────────────────────────────────────────────┘
"
`;

exports[`AST renderers plain text renderer should render condition 1`] = `
"
Condition: I am condition
    I am content
"
`;

exports[`AST renderers plain text renderer should render test line 1`] = `
"I am test line
  I am content
"
`;
